Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Watched Subcomponents
JDK
JDK-8221146
ZGC: Reports too much relocated
Log In
Resolved
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P4
Fix Version/s:
13
Affects Version/s:
13
Component/s:
hotspot
Labels:
zgc
Subcomponent:
gc
Resolved In Build:
b15
Description
ZRelocationSetSelectorGroup::select saves the from_size value as the amount to relocate. This value is the max possible amount to relocate of the pages within the fragmentation limit. The actual selected amount of pages can be less.
Attachments
Activity
People
Assignee:
Stefan Karlsson
Reporter:
Stefan Karlsson
Votes
:
0
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
2019-03-20 01:03
Updated:
2019-04-15 18:48
Resolved:
2019-04-01 09:47