8221146: ZGC: Reports too much relocated

Reviewed-by: pliden, eosterlund